--- a/Home.html
+++ b/Home.html
@@ -64,20 +64,23 @@
         <div class="col-5">
           <img src="asset/images/portrait-handsome-smiling-stylish-young-man-model-dressed-jeans-clothes-fashion-man_158538-5030.png" alt="">
           <h2>Designing Dashboards</h2>
-          <p>2020 Dashboard</p>
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+          <p class="year">2020</p>
+          <p class="discript">Dashboard</p>
+          <p class="p">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
         </div>
         <div class="col-5">
           <img src="asset/images/portrait-handsome-smiling-stylish-young-man-model-dressed-jeans-clothes-fashion-man_158538-5030.png" alt="">
           <h2>Vibrant Portraits of 2020</h2>
-          <p>2018 Illustration</p>
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+          <p class="year">2018</p>
+          <p class="discript">Illustration</p>
+          <p class="p">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
         </div>
         <div class="col-5">
           <img src="asset/images/portrait-handsome-smiling-stylish-young-man-model-dressed-jeans-clothes-fashion-man_158538-5030.png" alt="">
           <h2>36 Days of Malayalam type</h2>
-          <p>2018 Typography</p>
-          <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+          <p class="year">2018</p>
+          <p class="discript">Typography</p>
+          <p class="p">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
         </div>
         <div class="footer-1">
           <a href="#!" class="text-white me-4">
